[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Begok v15_2015___free.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/backgrounds/stars.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 480.996, 269.634 )
scale = Vector2( 1.49993, 1.49147 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -49.0
margin_right = 67.0
custom_fonts/font = SubResource( 1 )
text = " start "
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Titre" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -16.5
margin_right = 192.0
margin_bottom = 16.5
custom_fonts/font = SubResource( 1 )
text = "different planet"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.02
margin_top = -163.0
margin_right = 300.02
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "your mission is to find home
to aliens
"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NextLoreButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.0
margin_top = -39.0
margin_right = 1.0
custom_fonts/font = SubResource( 1 )
text = "next"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="NextLoreButton" to="." method="_on_NextLoreButton_pressed"]
